gitops/apps/homepage/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: config-processed
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: config-processed
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: config-processed
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: config-processed
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: config-processed
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: config-processed
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: config-processed
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: config-processed
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "800m"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
      volumes:
        - name: config-source
          configMap:
            name: homepage
        - name: config-processed
          emptyDir: {}
        - name: logs
          emptyDir: {}
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        seccompProfile:
          type: RuntimeDefault
